tests/compile_fail/debug/duplicate_fmt_on_variant.stderr
error: multiple `#[debug("...", ...)]` attributes aren't allowed
 --> tests/compile_fail/debug/duplicate_fmt_on_variant.rs:3:13
  |
3 |     #[debug("Test")]
  |             ^^^^^^
